// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package openmatch;
option go_package = "open-match.dev/open-match/pkg/pb";
option csharp_namespace = "OpenMatch";

import "google/rpc/status.proto";
import "google/protobuf/any.proto";

// A Ticket is a basic matchmaking entity in Open Match. A Ticket represents either an
// individual 'Player' or a 'Group' of players. Open Match will not interpret
// what the Ticket represents but just treat it as a matchmaking unit with a set
// of SearchFields. Open Match stores the Ticket in state storage and enables an
// Assignment to be associated with this Ticket.
message Ticket {
  // Id represents an auto-generated Id issued by Open Match.
  string id = 1;

  // An Assignment represents a game server assignment associated with a Ticket.
  // Open Match does not require or inspect any fields on Assignment.
  Assignment assignment = 3;

  // Search fields are the fields which Open Match is aware of, and can be used
  // when specifying filters.
  SearchFields search_fields = 4;

  // Customized information not inspected by Open Match, to be used by the match
  // making function, evaluator, and components making calls to Open Match.
  // Optional, depending on the requirements of the connected systems.
  map<string, google.protobuf.Any> extensions = 5;

  // Deprecated fields.
  reserved 2;
}

// Search fields are the fields which Open Match is aware of, and can be used
// when specifying filters.
message SearchFields {
  // Float arguments.  Filterable on ranges.
  map<string, double> double_args = 1;

  // String arguments.  Filterable on equality.
  map<string, string> string_args = 2;

  // Filterable on presence or absence of given value.
  repeated string tags = 3;
}

// An Assignment represents a game server assignment associated with a Ticket. Open
// match does not require or inspect any fields on assignment.
message Assignment {
  // Connection information for this Assignment.
  string connection = 1;

  // Customized information not inspected by Open Match, to be used by the match
  // making function, evaluator, and components making calls to Open Match.
  // Optional, depending on the requirements of the connected systems.
  map<string, google.protobuf.Any> extensions = 4;

  // Deprecated fields.
  reserved 2, 3;
}

// Filters numerical values to only those within a range.
//   double_arg: "foo"
//   max: 10
//   min: 5
// matches:
//   {"foo": 5}
//   {"foo": 7.5}
//   {"foo": 10}
// does not match:
//   {"foo": 4}
//   {"foo": 10.01}
//   {"foo": "7.5"}
//   {}
message DoubleRangeFilter {
  // Name of the ticket's search_fields.double_args this Filter operates on.
  string double_arg = 1;

  // Maximum value.
  double max = 2;

  // Minimum value.
  double min = 3;
}

// Filters strings exactly equaling a value.
//   string_arg: "foo"
//   value: "bar"
// matches:
//   {"foo": "bar"}
// does not match:
//   {"foo": "baz"}
//   {"bar": "foo"}
//   {}
message StringEqualsFilter {
  // Name of the ticket's search_fields.string_args this Filter operates on.
  string string_arg = 1;

  string value = 2;
}

// Filters to the tag being present on the search_fields.
//   tag: "foo"
// matches:
//   ["foo"]
//   ["bar","foo"]
// does not match:
//   ["bar"]
//   []
message TagPresentFilter {
  string tag = 1;
}

message Pool {
  // A developer-chosen human-readable name for this Pool.
  string name = 1;

  // Set of Filters indicating the filtering criteria. Selected players must
  // match every Filter.
  repeated DoubleRangeFilter double_range_filters = 2;

  repeated StringEqualsFilter string_equals_filters = 4;

  repeated TagPresentFilter tag_present_filters = 5;

  // Deprecated fields.
  reserved 3;
}

// A MatchProfile is Open Match's representation of a Match specification. It is
// used to indicate the criteria for selecting players for a match. A
// MatchProfile is the input to the API to get matches and is passed to the
// MatchFunction. It contains all the information required by the MatchFunction
// to generate match proposals.
message MatchProfile {
  // Name of this match profile.
  string name = 1;

  // Set of pools to be queried when generating a match for this MatchProfile.
  repeated Pool pools = 3;

  // Customized information not inspected by Open Match, to be used by the match
  // making function, evaluator, and components making calls to Open Match.
  // Optional, depending on the requirements of the connected systems.
  map<string, google.protobuf.Any> extensions = 5;

  // Deprecated fields.
  reserved 2, 4;
}

// A Match is used to represent a completed match object. It can be generated by
// a MatchFunction as a proposal or can be returned by OpenMatch as a result in
// response to the FetchMatches call.
// When a match is returned by the FetchMatches call, it should contain at least
// one ticket to be considered as valid.
message Match {
  // A Match ID that should be passed through the stack for tracing.
  string match_id = 1;

  // Name of the match profile that generated this Match.
  string match_profile = 2;

  // Name of the match function that generated this Match.
  string match_function = 3;

  // Tickets belonging to this match.
  repeated Ticket tickets = 4;

  // Customized information not inspected by Open Match, to be used by the match
  // making function, evaluator, and components making calls to Open Match.
  // Optional, depending on the requirements of the connected systems.
  map<string, google.protobuf.Any> extensions = 7;

  // Deprecated fields.
  reserved 5, 6;
}
